# manim-sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
tutorials/quickstart/: basic_scene.py  basic_scene2.py
